# agentsandbox

./: .dockerignore  .gitignore  AGENTS.md  CLIENT_TOOL_SPEC.md  CLIENT_TOOL_TODO.md  TODO.md  package.json
agent-manager-client/: .gitignore  README.md  openapi-python-client.yml  pyproject.toml
agent-manager-client/scripts/: generate.py
agent-manager-client/src/agent_manager_client/: __init__.py  clients.py  openapi.json
agent-manager-client/src/agent_manager_client/generated_client/: __init__.py
agent-manager-client/src/agent_manager_client/generated_client/models/: delete_images_image_id_response_200.py  delete_images_image_id_user_default_response_404.py  delete_users_me_avatar_response_500.py  get_agents_agent_id_response_200_status.py  get_agents_groups_archived.py  get_agents_groups_response_200_data_item_preview_item.py  get_agents_groups_type.py  get_agents_response_200.py  get_agents_response_200_data_item_created_by_user_type_0.py  get_agents_response_200_data_item_sub_agents_item_image_type_0.py  get_agents_response_200_data_item_sub_agents_item_status.py  get_agents_response_200_data_item_sub_agents_item_type.py  get_agents_response_200_data_item_sub_agents_item_visibility.py  get_auth_github_callback_response_400.py  get_auth_github_start_response_501.py  get_coordinator_session_coordinator_session_id_messages_response_200.py  get_coordinator_session_coordinator_session_id_response_404.py  get_coordinator_session_response_200.py  get_images_archived.py  get_images_image_id_environment_secrets_response_404.py  get_images_image_id_response_200.py  (+59 more)
(+769 files in other folders)
