[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-manager-client"
version = "0.0.1"
description = "Generated Python client and auth helpers for agent-manager"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "attrs>=23.2.0",
  "httpx>=0.27,<1",
  "python-dateutil>=2.9.0",
]

[dependency-groups]
dev = [
  "ruff>=0.12,<1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["agent_manager_client*"]

[tool.setuptools.package-data]
agent_manager_client = ["openapi.json", "py.typed"]

[tool.uv]
default-groups = ["dev"]
